Advanced Closed Eco JAP,SOV

--- a/localisation/PMMM_l_english.yml
+++ b/localisation/PMMM_l_english.yml
@@ -1,5 +1,8 @@
 ﻿l_english:
 
+
+JAP_eco_closed_fickdichgame:0 "Advanced Closed Economy"
+
 #FRA
 PMMM_RAJ_nosplit:0 "RPMMM Note: India will not split appart once Independence is gained !!\n\n"
 player_training:0 "Peace Time Training"
