--- a/localisation/PMMM_l_english.yml
+++ b/localisation/PMMM_l_english.yml
@@ -3,16 +3,19 @@
 
 JAP_eco_closed_fickdichgame:0 "Advanced Closed Economy"
 
-#FRA
+
 PMMM_RAJ_nosplit:0 "RPMMM Note: India will not split appart once Independence is gained !!\n\n"
 player_training:0 "Peace Time Training"
 player_training_tt:0 "\nRRemoved when your Country enters War !!"
 neutral_nation:0 "Neutral Nation"
 
+
+#FRA
 PMMM_FRA:0 "French Legitimacy"
 PMMM_FRA_take_over_west_africa:0 "Take over West Africa"
 PMMM_FRA_take_over_syria:0 "Take over Syria"
 PMMM_FRA_take_over_madagascar:0 "Take over Madagascar"
+PMMM_FRA_take_over_north_africa:0 "Attack Vichy France"
 PMMM_FRA_desc:0 "Current Legitimacy: [?FRA_PMMM_Legit]"
 FRA_PMMM_ADD_1_LEGIT_TT:0 "Add G1! YLegitimacy!"
 FRA_PMMM_ADD_5_LEGIT_TT:0 "Add G5! YLegitimacy!"
@@ -20,6 +23,8 @@ PMMM_FRA_minus_20_legi_tt:0 "RRemoves! Y20! YLegitimacy!"
 PMMM_FRA_add_legitimacy:0 "Add 1 Legitimacy"
 PMMM_FRA_CAP:0 "France has fallen"
 PMMM_FRA_idea_easy_trade:0 "Allied Trade Deals"
+PMMM_FRA_idea_exile_no_surrender:0 "No Surrender"
+
 
 PMMM_FRA_mind_20_legi_tt:0 "At least Y20 Legitimacy!"
 PMMM_FRA_mind_60_legi_tt:0 "At least Y60 Legitimacy!"
@@ -27,6 +32,7 @@ PMMM_FRA_mind_60_legi_tt:0 "At least Y60 Legitimacy!"
 PMMM_FRA_hinweis_auf_decision_1:0 "By completing this Focus you get access to the decision YTake over West Africa!. \nIf you have more than Y20 Legitimacy! you Rdont! need to do this Focus"
 PMMM_FRA_hinweis_auf_decision_2:0 "By completing this Focus you get access to the decision YTake over Syria!. \nIf you have more than Y20 Legitimacy! you Rdont! need to do this Focus"
 PMMM_FRA_hinweis_auf_decision_3:0 "By completing this Focus you get access to the decision YTake over Madagascar!. \nIf you have more than Y20 Legitimacy! you Rdont! need to do this Focus"
+PMMM_FRA_hinweis_auf_decision_4:0 "By completing this Focus you get access to the decision YAttack Vichy France!. \nIf you have more than Y20 Legitimacy! you Rdont! need to do this Focus"
 
 #YUG
 YUG_Yugoslavian_cooperation:0 "Yugoslavian Unity"
@@ -86,6 +92,20 @@ YUG_centrelaize_tooling_workshops2:0 "Expand Civilian Industry"
  general_staff2:0 "General Staff"
  Yugoslavian_Army:0 "Yugoslavian Army"
 
+
+
+ VFR_fascism: "Vichy France"
+ VFR_fascism_ADJ: "Vichy France"
+ VFR_fascism_DEF: "Vichy France"
+ VFR_neutrality: "Vichy France"
+ VFR_neutrality_ADJ: "Vichy France"
+ VFR_neutrality_DEF: "Vichy France"
+ VFR_democratic: "Vichy France"
+ VFR_democratic_ADJ: "Vichy France"
+ VFR_democratic_DEF: "Vichy France"
+ VFR_communism: "Vichy France"
+ VFR_communism_ADJ: "Vichy France"
+ VFR_communism_DEF: "Vichy France"
 
 
 
