--- a/localisation/PMMM_l_english.yml
+++ b/localisation/PMMM_l_english.yml
@@ -125,5 +125,7 @@ YUG_centrelaize_tooling_workshops2:0 "Expand Civilian Industry"
  SPR_neutrality_DEF: "Nationalist Spain"
 
 
+PMMM_SPR_Civil_War_ongoing:0 "The Spanish Civil war has Started"
+
 LIT_united_baltic:0 "United Baltics"
 
