--- a/localisation/PMMM_l_english.yml
+++ b/localisation/PMMM_l_english.yml
@@ -127,5 +127,9 @@ YUG_centrelaize_tooling_workshops2:0 "Expand Civilian Industry"
 Military_Junta:0 "Junta"
 PMMM_SPR_Civil_War_ongoing:0 "The Spanish Civil war has Started"
 
+PMMM_SPR_start_civilwar:0 "Start of the Civil War"
+PMMM_SPR:0 "Spanish Civil War"
+PMMM_SPR_end_of_civilwar:0 "End of the Civil War"
+
 LIT_united_baltic:0 "United Baltics"
 
